# YAML

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  THIRD_PARTY_LICENSES.md  main.py  pyproject.toml  readme.md  validate.py
00_start_here/: 00_START_HERE.md  CURRICULUM.md  GLOSSARY.md  ORGANIZATION.md  README.md  README_00_start_here.md  TIPS_choosing_voter_counts.md  TIPS_terminology.md  Why_STAR_Voting.html  Why_STAR_Voting.md  YAML_authoring_template.md  ballot_and_terminology_basics.md  options_examples.yaml  preference.md  quorum.md  rcv_irv_vs_star.md  scores_vs_ranks.md  scoring-methods-vs-ranked-voting.md  strict_vs_weak_ranks.md  tabulate_all.py  tabulation_star_vs_irv.md
00_start_here_tabulated/: 04a_c4_b4_display-options_tabulated.txt  options_examples_tabulated.txt
01_STAR/: README_01_STAR.md
01_Single_winner/: 00a_c2_b1_two-candidates.yaml  01a_c2_b1_two-candidates.yaml  01a_c2_b2_two-candidates.yaml  01b_c2_b2_two-candidates.yaml  01c_c2_b3_two-candidates.yaml  02a_c3_b1_three-candidates.yaml  02b_c3_b2_three-candidates.yaml  03a_c3_b3_style-bullet-vote.yaml  03b_c3_b3_1_style-protest-vote.yaml  03b_c3_b3_2_expand_style-protest-vote.yaml  04b_c4_b3_display-options-all.yaml  05a_c5_b3_unanimous-ballots.yaml  06a_c9_b3_large-field-equal-support.yaml  06b_c9_runoff-overturns-leader.yaml  09_c4_b100_tennessee-capital.yaml  Approval_ballot.yaml  RCV_ballot_example.yaml  abstentions.yaml  center_squeeze_irv.yaml  center_squeeze_star.yaml  center_squeeze_voteline_1d.yaml  count_simplicity_star_vs_irv.yaml  equal_support_runoff_demo.yaml  (+14 more)
(+1033 files in other folders)
