[project]
name = "yaml"
version = "0.1.0"
description = "Schema enforcement for parsing and validating test cases for methods like STAR Voting, RCV-RR, Approval, and RCV-IRV."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=2.0.0",
    "pydantic>=2.13.4",
    "strictyaml>=1.7.3",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "strictyaml.*"
ignore_missing_imports = true
